k8s/misc/dnsutils.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  namespace: default
spec:
  containers:
  - name: dnsutils
    image: debian
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
